--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -20,10 +20,30 @@
 
     <Button
         android:id="@+id/btnLogin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="103dp"
+        android:layout_height="74dp"
         android:layout_below="@id/etPassword"
-        android:layout_centerHorizontal="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="141dp"
+        android:layout_marginTop="391dp"
+        android:layout_marginEnd="167dp"
+        android:layout_marginBottom="176dp"
         android:text="Login" />
+
+    <Button
+        android:id="@+id/btnMoveToSignup"
+        android:layout_width="112dp"
+        android:layout_height="65dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="143dp"
+        android:layout_marginTop="595dp"
+        android:layout_marginEnd="156dp"
+        android:layout_marginBottom="70dp"
+        android:text="Button" />
 
 </RelativeLayout>
