--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -115,7 +115,7 @@
         app:layout_constraintVertical_bias="0.722" />
 
     <Button
-        android:id="@+id/btnMove"
+        android:id="@+id/btnMoveToLogin"
         android:layout_width="261dp"
         android:layout_height="74dp"
         android:text="Log In"
