--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,4 +7,10 @@
         <item name="android:background">@color/black_overlay</item>
         <item name="android:buttonBarStyle">?android:attr/buttonBarStyle</item>
     </style>
+
+    <!-- Update the RoundedButton style to set background to @color/Peach -->
+    <style name="RoundedButton" parent="Widget.AppCompat.Button">
+        <item name="android:background">@color/Peach</item> <!-- Change to Peach color -->
+        <item name="android:textColor">#333</item>
+    </style>
 </resources>
