--- a/app/src/main/res/layout/activity_cheese_cake_item.xml
+++ b/app/src/main/res/layout/activity_cheese_cake_item.xml
@@ -8,10 +8,11 @@
     tools:context=".CheeseCakeItem">
 
     <TextView
-        android:id="@+id/txtItemTitle"
+        android:id="@+id/txtTitle"
         android:layout_width="368dp"
         android:layout_height="98dp"
-        android:text="Japanese Cheesecake"
+        android:text="Japanese Cheesecake Medium"
+        android:textAlignment="center"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -19,7 +20,7 @@
         app:layout_constraintHorizontal_bias="0.488"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.086" />
+        app:layout_constraintVertical_bias="0.082" />
 
     <CheckBox
         android:id="@+id/cbChocolate"
@@ -27,8 +28,12 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:text="Chocolate"
-        tools:layout_editor_absoluteX="156dp"
-        tools:layout_editor_absoluteY="423dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.682" />
 
     <Button
         android:id="@+id/btnAddToCart"
@@ -46,12 +51,24 @@
         android:id="@+id/btnViewCart"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
+        android:text="View Cart"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.922" />
+
+    <ImageView
+        android:id="@+id/imgCheeseCake"
+        android:layout_width="298dp"
+        android:layout_height="291dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.27"
+        app:srcCompat="@drawable/cheesecakeimage" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
