--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -105,7 +105,7 @@
         android:id="@+id/btnSignUp"
         android:layout_width="262dp"
         android:layout_height="64dp"
-        android:background="@color/black"
+        android:background="@color/Peach"
         android:text="Sign Up"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
